--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         }
     ],
     "require": {
-        "illuminate/database": "^5.1",
-        "illuminate/routing": "^5.1",
-        "illuminate/support": "^5.1",
-        "illuminate/http": "^5.1"
+        "illuminate/database": "5.*",
+        "illuminate/routing": "5.*",
+        "illuminate/support": "5.*",
+        "illuminate/http": "5.*"
     },
     "autoload": {
         "psr-4": {
