--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "illuminate/database": "5.*",
         "illuminate/routing": "5.*",
         "illuminate/support": "5.*",
-        "illuminate/http": "5.*"
+        "illuminate/http": "5.*",
+        "neomerx/limoncello": "^0.5.1"
     },
     "autoload": {
         "psr-4": {
