--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "illuminate/routing": "5.*",
         "illuminate/support": "5.*",
         "illuminate/http": "5.*",
-        "neomerx/limoncello": "^0.5.1"
+        "neomerx/limoncello": "dev-develop"
     },
     "autoload": {
         "psr-4": {
